# premonition

./: .clangd  .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  GUI_DESIGN_BRIEF.md  HANDOFF-next.md  HANDOFF.md  PREMONITION_BRIEF.md  README.md  THIRD-PARTY-NOTICES.txt  mockup.html
Premonition/: CMakeLists.txt  Parameters.h  Premonition.RPP  Premonition.cpp  Premonition.h  Premonition.sln  Presets.h  README.md  config.h
Premonition/Premonition.xcworkspace/: contents.xcworkspacedata
Premonition/config/: Premonition-ios.xcconfig  Premonition-mac.xcconfig  Premonition-wasm.mk  Premonition-web.mk  Premonition-win.props
Premonition/dsp/: AudioLoader.h  AudioLoader.mm  Convolution.h  DelayLine.h  FitToBar.h  OfflinePipeline.h  Reverb.h  Reverse.h  StereoBuffer.h  TimeStretch.h  WavWriter.h  premonition_dsp_impl.mm  stb_vorbis_impl.cpp  wdl_fft_impl.c
Premonition/projects/: Premonition-aax.vcxproj  Premonition-aax.vcxproj.filters  Premonition-app.vcxproj  Premonition-app.vcxproj.filters  Premonition-clap.vcxproj  Premonition-clap.vcxproj.filters  Premonition-vst2.vcxproj  Premonition-vst2.vcxproj.filters  Premonition-vst3.vcxproj  Premonition-vst3.vcxproj.filters  Premonition-wam-controller.mk  Premonition-wam-processor.mk  Premonition-wasm-dsp.mk  Premonition-wasm-ui.mk
Premonition/projects/Premonition-iOS.xcodeproj/: project.pbxproj
Premonition/projects/Premonition-iOS.xcodeproj/xcshareddata/xcschemes/: iOS-APP with AUv3.xcscheme  iOS-AUv3.xcscheme  iOS-AUv3Framework.xcscheme
Premonition/projects/Premonition-macOS.xcodeproj/: project.pbxproj
Premonition/projects/Premonition-macOS.xcodeproj/xcshareddata/xcschemes/: All macOS.xcscheme  macOS-AAX.xcscheme  macOS-APP with AUv3.xcscheme  macOS-APP.xcscheme  macOS-AUv2.xcscheme  macOS-AUv3.xcscheme  macOS-AUv3Framework.xcscheme  macOS-CLAP.xcscheme  macOS-VST2.xcscheme  macOS-VST3.xcscheme
Premonition/resources/: AUv3Framework.h  IPlugAUViewController_vPremonition.xib  Premonition-AAX-Info.plist  Premonition-AU-Info.plist  Premonition-CLAP-Info.plist  Premonition-Pages.xml  Premonition-VST2-Info.plist  Premonition-VST3-Info.plist  Premonition-iOS-AUv3-Info.plist  Premonition-iOS-Info.plist  Premonition-iOS-LaunchScreen.storyboard  Premonition-iOS-MainInterface.storyboard  Premonition-macOS-AUv3-Info.plist  Premonition-macOS-AUv3Framework-Info.plist  Premonition-macOS-Info.plist  Premonition-macOS-MainMenu.xib  main.rc  main.rc_mac_dlg
Premonition/resources/ir/src/: gen-irs.py
Premonition/scripts/: makedist-wasm.sh  makedist-web.sh  prepare_resources-ios.py  prepare_resources-mac.py
docs/: landing-page-wireframe.html  landing-page-wireframe.md
handoff/: HANDOFF-2026-04-19-reverb-types-and-modes.md  HANDOFF-2026-04-19-riser-polish-CLEAR-AFTER-EACH-STEP.md  HANDOFF-2026-04-21-ir-convolution-debug.md  HANDOFF-next.md  HANDOFF.md  findings-preflight.md  phase2-dsp-survey.md  step3-ir-license-findings.md
iPlug2/Dependencies/IGraphics/yoga/: LICENSE
scripts/: INSTALL.txt  README.md  SIGNING.md  release-adhoc.sh
tests/: CMakeLists.txt  test_convolution.cpp  test_fit_to_bar.cpp  test_pipeline.cpp  test_reverb.cpp  test_reverse.cpp
tools/: CMakeLists.txt  render_ir.cpp
